Feature / Secret loader interface + JKS implementation (#180)
* Update central config loading mechanism

* Include proto src dirs in Gradle src dirs, let's autocomplete work in the IDE

* Add comments on ConfigFormat

* Add secret loader interface, update config loader interface

* Remove old methods from config loaders (no longer used)

* Plugin manager / PSI update

* Matching updates for core data / executor plugins

* Update GCP config plugin to match changes in plugin API

* Update AWS config plugin to match changes in plugin API

* Update startup sequence (fix warnings)

* Add comments in startup sequence

* Remove unused startup modes

* Move dev config from etc/ into dev/config

* Update IDEA run configs for new dev config location

* Update local config plugin after plugin system updates

* Update test config plugin after plugin system updates

* Update config parser tests after config / startup refactor

* Update config manager tests after config / startup refactor

* Fix Java doc warnings in the common lib

* Finish update to existing functionality in ConfigManager

* Turn off Javadoc warnings in generated code

* Add doc comments in DeployMetaDB

* Draft of JKS secret loader

* Add unit tests for loading secrets in config manager

* Add startup log helper, that writes logs to console until the logging system is activated

* Use StartupLog in plugin manager instead of a regular logger

* New error types for config errors

* Update startup sequence and config manager

* Update config manager tests to match config manager

* Remove startup logging config (no longer needed, startup logging uses console)

* Update test for standard args processor

* Remove code in services and common base service that has moved to startup sequence

* Set logging config in dev-local gateway

* Include secrets in config manager test config

* Add secrets key stores for config manager test and dev local config
